[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-fundamental-analysis"
version = "0.1.0"
dependencies = [
    "mcp>=1.2.0",
    "finnhub-python"
]

[project.scripts]
"mcp-server-fundamental-analysis" = "mcp_server_fundamental_analysis.server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_fundamental_analysis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]
