[project]
name = "mcp-server-sentiment"
version = "0.1.0"
description = "MCP server for stock sentiment analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "newsapi-python",
    "nltk"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aresponses"
]

[project.scripts]
mcp-server-sentiment = "mcp_server_sentiment.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_sentiment"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]
